--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 /* get out of here why are you here please leave */
 
-body {
-    background-color: #0f0f0f;
-}
+
 
 a:link. {
     color:antiquewhite
@@ -28,3 +26,7 @@ p {
     color:antiquewhite;
 }
 
+body {
+    background-color: #0f0f0f;
+    color:#f0f0f0
+}
