--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ p {
 }
 
 body {
-    background-color: #0f0f0f;
-    color:#f0f0f0
+    background-image: url(black\ backgroujnd.jpg);
+    background-color: black;
+    background-repeat repeat;
 }
