--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ p {
 }
 
 body {
-    background-image: url(black\ backgroujnd.jpg);
+    background-image: url("black backgroujnd.jpg");
     background-color: black;
-    background-repeat:repeat;
+    background-repeat: repeat;
 }
