--- a/style.css
+++ b/style.css
@@ -29,3 +29,9 @@ body {
     background-color: black;
     background-repeat: repeat;
 }
+
+a {
+    font-family:Arial, Helvetica, sans-serif;
+    color:antiquewhite;
+    text-decoration: none;
+}
