--- a/style.css
+++ b/style.css
@@ -35,3 +35,8 @@ a {
     color:antiquewhite;
     text-decoration: none;
 }
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    color:antiquewhite
+}
