--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ p {
 }
 
 body {
-    background-image: url("black_backgroujnd.jpeg");
+    background-image: url("real\ black\ bapckground.jpg");
     background-size: cover;
     background-color: black;
     background-repeat: repeat;
