--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ a {
     color:antiquewhite;
     text-decoration: none;
 }
+a:hover {
+    text-decoration:underline;
+}
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
