--- a/style.css
+++ b/style.css
@@ -30,17 +30,16 @@ h2 {
     color:antiquewhite;
     border-bottom:antiquewhite;
 }
-.button {
-    background-color:#101010;
-    border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  border: 3px solid #555555;
+img {
+    align-self: center;
 }
+
+.img2 {
+    float:right;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
