--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* get out of here why are you here please leave */
 p {
     font-family:Arial, Helvetica, sans-serif;
-    color:antiquewhite;
+    color:white;
 }
 
 body {
@@ -13,7 +13,7 @@ body {
 
 a {
     font-family:Arial, Helvetica, sans-serif;
-    color:antiquewhite;
+    color:white;
     text-decoration: none;
 }
 a:hover {
@@ -22,13 +22,13 @@ a:hover {
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
-    color:antiquewhite;
-    border-bottom:antiquewhite;
+    color:white;
+    border-bottom:white;
 }
 h2 {
     font-family: Arial, Helvetica, sans-serif;
-    color:antiquewhite;
-    border-bottom:antiquewhite;
+    color:white;
+    border-bottom:white;
 }
 img {
     align-self: center;
