--- a/style.css
+++ b/style.css
@@ -37,16 +37,16 @@ img {
 }
 
 .infoDiv {
-    background: color #000;;
+    background: color #000;
     border-color: white;
     border-width: 2px;
     border-style: solid;
 }
 
-.puzzleIntroLink {
-    text-align: center;
+a.puzzleIntroLink {
+    color:#FFFFFF;
 }
-
-.puzzleIntroLink:hover {
-    text-shadow: 1px 1px 3px #FFFFFF
+a.puzzleIntroLink:hover {
+    text-shadow: 1px 1px 2px #ffffff77;
+    text-decoration: underline;
 }
