div fix did not work

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ p.puzzle {
     color:#ffffff;
     font-size: medium;
 }
-div.container {
+div.puzzle {
     border: 3px #ffffff;
     align-content:center;
 }
