--- a/style.css
+++ b/style.css
@@ -66,3 +66,14 @@ div.puzzle {
 .untouchable {
     user-select: none;
 }
+.btngroup button{
+    color:white;
+    background-color: #000;
+    padding: 5px 12px;
+    cursor:pointer;
+    float:left;
+    border:none;
+}
+.btngroup button:hover{
+    background-color:#444;
+}
