--- a/school_stuff/fadeInScript.css
+++ b/school_stuff/fadeInScript.css
@@ -12,9 +12,11 @@
   }
   pre {
     color:white;
+    font-family: 'Times New Roman', Times, serif;
   }
-  h6 {
+  h4 {
     color:white;
+    font-family: Arial, Helvetica, sans-serif;
   }
   img {
     border: 3px solid white;
