--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ div.puzzle {
     border: 3px #ffffff;
     justify-self: center;
     align-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 .untouchable {
     user-select: none;
