--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ div.puzzle {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    max-width:fit-content
+    max-width:720px;
 }
 .untouchable {
     user-select: none;
