--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ div.puzzle {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    justify-self: center;
+    align-content: center;
+    width: 50%;
 }
 .untouchable {
     user-select: none;
